navbar is ready

--- a/client/src/components/NavbarWhite.module.css
+++ b/client/src/components/NavbarWhite.module.css
@@ -6,6 +6,15 @@
   font-family: "poppinsbold";
 }
 
+
+.nav_link_text_race {
+    color: black;
+    font-size: 1rem;
+    margin: 2rem;
+    text-decoration: none;
+    font-family: "poppinsbold";
+}
+
 .nav_link__text:hover {
   color: var(--pink-primair);
   font-size: 1rem;
@@ -62,6 +71,24 @@
 
 /* DARK */
 
+.nav_link__text_mobile {
+    display: none;
+    color: black;
+    font-size: 1rem;
+    margin: 2rem;
+    text-decoration: none;
+    font-family: 'poppinsbold';
+}
+
+.nav_link__text_mobile:hover {
+    color: var(--pink-primair);
+    font-size: 1rem;
+    margin: 2rem;
+    text-decoration: none;
+    font-family: 'poppinsbold';
+}
+
+
 
 .nav_link__textDark_mobile {
     display: none;
@@ -71,8 +98,6 @@
     text-decoration: none;
     font-family: 'poppinsbold';
 }
-
-
 
 .nav_link__textDark_login {
     color: white;
@@ -98,7 +123,7 @@
     font-family: 'poppinsbold';
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 700px) {
     .nav_link__textDark_mobile {
         display: inline;
     }
@@ -114,6 +139,19 @@
     .nav_link__dropdownDark {
         display: none;
     }
+
+
+.nav_link__text_mobile {
+    display: inline;
+}
+
+.nav_link__dropdown {
+    display: none;
+}
+
+.nav_link_text_race {
+    display: none
+}
 }
 
 .nav_link__textDark {
@@ -200,7 +238,7 @@ nav ul li:hover > ul {
   align-items: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .line {
     width: 30px;
     height: 3px;
@@ -219,7 +257,12 @@ nav ul li:hover > ul {
     transform: translate(-5%, -50%);
   }
 
+
   .containerNavbaaar {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
   }
 }
 
