--- a/client/src/containers/Detail.module.css
+++ b/client/src/containers/Detail.module.css
@@ -69,9 +69,14 @@
   margin: 2rem;
 }
 
+
+.programma {
+  composes: App-h1-primaircolor from "../styles/App.css";
+}
+
 .counter_container {
   background-color: white;
-  width: 18rem;
+  width: 16rem;
   display: flex;
   position: absolute;
   justify-content: space-between;
@@ -110,7 +115,8 @@
   font-size: 4rem;
 }
 
-.map {
+.map_map {
+  width: 34rem;
 }
 
 .container_program {
@@ -123,8 +129,24 @@
 
 @media screen and (max-width: 1080px) {
   .section34container {
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
+
+  .programma {
+    composes: App-h1-primaircolor from "../styles/App.css";
+    text-align: center;
+    margin-top: 3rem;
+  }
+
+
+  .number {
+    display: none;
+    composes: App-h1-number-primaircolor from "../styles/App.css";
+  }
+  
 
   .section3 {
     display: flex;
@@ -287,6 +309,70 @@
 .section34container {
   display: flex;
   margin: 2rem;
+}
+
+@media (max-width: 650px) {
+  .map_map {
+    width: 90vw;
+  }
+/* 
+  .tableContainer {
+    display: none;
+  } */
+
+  .program_time {
+    display: none;
+  }
+
+  .info_image {
+    width: 90vw;
+  }
+
+  .counter_container {
+    margin: 0 auto;
+  }
+
+  .counter_gigacontainer {
+    display: flex;
+    justify-content: center;
+    margin-top: -6rem;
+    margin-bottom: 3rem;
+  }
+
+  .container_container_sponsor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .city_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+
+  .detail_body {
+    width: 90vw;
+    composes: App-body from "../styles/App.css";
+    margin-bottom: 4rem;
+  }
+
+
+  .info_container {
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+
+  .uppertitle_container {
+    margin-top: 3rem;
+    text-align: center;
+  }
+
+
 }
 
 @media (max-width: 900px) {
