--- a/client/src/containers/Info.module.css
+++ b/client/src/containers/Info.module.css
@@ -85,16 +85,32 @@
 }
 
 
+.tweedebutton {
+    composes: App-button_secundair from "../styles/App.css";
+
+}
+
+.eerstebutton {
+
+    composes: App-button_secundair-outline from "../styles/App.css"
+}
+
+
 .navlink_top {
     margin-bottom: 2rem;
     color: var(--pink-primair);
     font-style: italic;
     font-size: .9rem;
     font-family: 'poppinsbold';
+    width: 100%;
 }
 
 
 .section2 {
+    margin-top: 6rem;
+}
+
+.section3 {
     margin-top: 6rem;
 }
 
@@ -129,6 +145,10 @@
     font-size: 1.5rem;
     margin-top: 0.8rem;
     margin-bottom: 0.2rem;
+}
+
+.h2hierzo {
+    composes: App-h1-primaircolor from "../styles/App.css";
 }
 
 .containertext {
@@ -192,6 +212,10 @@
     margin-left: 2rem;
 }
 
+.numberrr {
+    composes: App-h1-number-primaircolor from "../styles/App.css"
+}
+
 .hashtag {
     font-family: 'poppinsextrabold_italic';
     color: var(--brown-title);
@@ -214,4 +238,119 @@
     display: flex;
     justify-content: flex-end;
     width: 100%;
+}
+
+
+
+
+
+
+@media (max-width: 1200px) {
+    .profilepictureRita {
+      display: none;
+    }
+}
+
+@media (max-width: 1020px) {
+    .card_container  {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    .card_extraInfo {
+        margin-top: 3rem;
+    }
+}
+
+@media (max-width: 650px) {
+    .map_map {
+      width: 90vw;
+    }
+/* 
+    .navlink_top {
+        margin-left: 2rem;
+    } */
+
+
+    .subtitle {
+        text-align: center;
+    }
+
+    .eerstebutton {
+        width: 60vw;
+        margin: 0rem;
+    }
+
+    .h2hierzo {
+        composes: App-h1-primaircolor from "../styles/App.css";
+        text-align: center;
+    } 
+
+    .numberrr {
+        display: none;
+    }
+
+
+    .buttonInfo {
+        display: flex;
+        flex-direction: column;
+        width: 80vw;
+        align-items: center;
+    }
+
+    .section3 {
+        display: none;
+    }
+
+    .uppersubcontainer {
+        margin: 0 auto;
+    }
+
+    .card_container {
+        padding: 0;
+    }
+
+    .containerGlobal {
+        display: flex;
+    }
+
+    .card_container {
+        display: flex;
+        flex-direction: column;
+        align-items: cen;
+    }
+
+
+    .buttonGigacontianer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text_person {
+        text-align: center;
+        max-width: 15rem;
+    }
+
+
+    .hashtag {
+        text-align: center;
+        padding-top: 2rem;
+    }
+
+    .tweedebutton {
+        width: 55vw;
+        margin-top: 2rem;
+        text-align: center;
+        padding-top: 0.5rem;
+        padding-bottom: 0rem;
+        align-items: center;
+        padding: 1rem;
+        line-height: 1.6rem;
+    }    
+
+
+
 }
